@@ -11,6 +11,13 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-00-04
+2011-03-20 Andy Salnikov
+- added smart pointer typedef for datagram class and couple of utility
+  methods to manage datagram memory.
+- changed all users of datagram class to use smart pointer class instead
+  of bare pointer
+
 Tag: V00-00-03
 2011-02-16 Andy Salnikov
 - stop throwing exceptions at premature EOF, printing error message is 
